--- a/static/index.html
+++ b/static/index.html
@@ -100,7 +100,9 @@
  </head>
  <body>
   <div class="wrapper">
-   <p>这是 <a href="http://goodrain.com" target="_blank">好雨</a> 云平台 <a href="http://code.goodrain.com/demo/go-hello/tree/master" target="_blank">Golang</a> 代码示例运行效果页面。</p>
+  <h1> Hello Golang!</h1>
+   <p>这是 <a href="https://www.goodrain.com" target="_blank">好雨</a> 云平台 <a href="http://code.goodrain.com/demo/go-hello/tree/master" target="_blank">Golang</a> 代码示例运行效果页面。</p>
+   <p>恭喜！Golang代码已成功构建并运行！</p>
   </div>
  </body>
 </html>
